css/styles.css
/* Importing a Google Font */

@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&display=swap');

/* Changing the main font and background colour */

body, html {
  margin: 0;
  padding: 0;
  height: 100%;
}

body {
	font-family: Raleway, sans-serif;
	background-color: #FFF5ED;
}

/* Changing the background colour for the header */

header {
	background-color:  #50A5AF;
}

/* Changing the background color for the navigation bar */

.navbar {
	background-color: #50A5AF;
}

/* Effect on social media buttons */

footer a:hover {
	opacity: .5;
}

/* Corporate navbar */

#navbar-corporate a.active {
	color: #800000;
	font-weight: bold;
}

/* Nav bar styles */

.navbar {
    overflow: hidden;
    background-color: #19265B !important;
    position: fixed; 
    top: 0; 
    width: 100%;
	z-index: 2;
  }

  .navbar a{
    color:white !important;
	z-index: 1;
  }

  .navbar-nav .dropdown-menu{
	z-index: 2;
  }


/* Hero Section shadow */

.white-shadow {
	text-shadow: -.01em -.01em .01em white,
		.02em .02em .02em white,
		0 0 .2em white,
		0 0 .5em white;
}

/* Styles for the video & text */
#myVideo {
    position: fixed;
    top: 0;
    left: 0;
    min-width: 100%;
    min-height: 100%;
	z-index: -1;
  }
  
  .video-container{
    position:relative;
    width:100%;
    height:100%;
    overflow:hidden;
  }

  .video-container video{
    width: auto;
    height:auto;
  }

  #overlay {
    position: absolute;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.6);
    width: 100%;
    height:100%;
	z-index: 1;
  font-family: "Red Hat Display";
  }

  #inner {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
  }
  h1{
    color: white;
  }
  p{
    color:blanchedalmond;
  }

  
  /* Button Styles */
.btn-primary{
	background-color: #F1610D;
  }
	#centerButton {
  margin-top: 20px;
  
	}
  
/* Footer */
  
footer {
overflow: hidden;
position: fixed;
	  bottom: 0;
	  width: 100%;
	  background-color: #19265B; 
	  color: white; 
	  padding: 20px 0; 
	  text-align: center;
	  z-index: 2;
	}
	
	.container {
	  max-width: 1200px; 
	  margin: 0 auto; 
	}

